==> ncc-1701/_TmpDev/Middlewares/FreeRTOS-Plus/Source/FreeRTOS-Plus-FAT/portable/STM32F4xx/ff_sddisk.c <==
#include <stdlib.h>
#include <string.h>
#include <stdarg.h>
#include <stdio.h>
#include "FreeRTOS.h"
#include "task.h"
#include "semphr.h"
#include "portmacro.h"
#include "ff_sddisk.h"
#include "ff_sys.h"
#include "stm32f4xx_hal.h"
	#define sdMAX_TIME_TICKS			pdMS_TO_TICKS(2000UL)
	#define sdCARD_DETECT_DEBOUNCE_TIME_MS (5000)
#define sdSIGNATURE 				0x41404342UL
#define sdHUNDRED_64_BIT			(100ull)
#define sdBYTES_PER_MB				(1024ull * 1024ull)
#define sdSECTORS_PER_MB			(sdBYTES_PER_MB / 512ull)
#define sdIOMAN_MEM_SIZE			4096
	#define	sdARRAY_SIZE(x)	(int)(sizeof(x) / sizeof(x)[ 0 ])
	#define SD_SDIO_CLK_DIV 			4

static BaseType_t prvSDMMCInit(BaseType_t xDriveNumber)
{
	/* 'xDriveNumber' not yet in use. */
	(void)xDriveNumber;

	if(xSDCardSemaphore == NULL) xSDCardSemaphore = xSemaphoreCreateBinary();

	/* Hardware initialisation */
	prvSDIO_SD_Init();
	vGPIO_SD_Init();

#if(SDIO_USES_DMA != 0)
	prvSDIO_DMA_Init();
#endif

	uint32_t SD_state = HAL_SD_ERROR_NONE;
	/* Check if the SD card is plugged in the slot */
	if(prvSDDetect() == pdFALSE)
	{
		FF_PRINTF("No SD card detected\n");
		return 0;
	}
	/* When starting up, skip debouncing of the Card Detect signal. */
	xCardDetect.bLastPresent = pdTRUE;
	xCardDetect.bStableSignal = pdTRUE;
	/* Initialise the SDIO device and read the card parameters. */
	if(HAL_SD_Init(&xSDHandle) != HAL_OK)
	{
		SD_state = HAL_SD_ERROR_GENERAL_UNKNOWN_ERR;
	}
	else
	{
		/* Get SD card Information */
		HAL_SD_GetCardInfo(&xSDHandle, &xSDCardInfo);

#if(BUS_4BITS != 0)
		if(SD_state == SD_OK)
		{
			uint32_t rc;

			xSDHandle.Init.BusWide = SDIO_BUS_WIDE_4B;
			rc = HAL_SD_WideBusOperation_Config(&xSDHandle, SDIO_BUS_WIDE_4B);
		}
#endif
	}
	return SD_state == HAL_SD_ERROR_NONE ? 1 : 0;
}

static BaseType_t prvSDDetect(void)
{
	/*!< Check GPIO to detect SD */
	if(HAL_GPIO_ReadPin(SD_PRESENT_GPIO_PORT, SD_PRESENT_PIN) != 0)
	{
		/* The internal pull-up makes the signal high. */
		return pdFALSE;
	}

	/* The card will pull the GPIO signal down. */
	return pdTRUE;
}

static int32_t prvFFRead(uint8_t *pucBuffer,
		uint32_t ulSectorNumber, uint32_t ulSectorCount, FF_Disk_t *pxDisk)
{
	int32_t lReturnCode = FF_ERR_IOMAN_OUT_OF_BOUNDS_READ | FF_ERRFLAG;

	if(	(pxDisk == NULL) ||
		(xSDCardStatus != pdPASS) ||
		(pxDisk->ulSignature != sdSIGNATURE) ||
		(pxDisk->xStatus.bIsInitialised == pdFALSE) ||
		(ulSectorNumber >= pxDisk->ulNumberOfSectors) ||
		((pxDisk->ulNumberOfSectors - ulSectorNumber) < ulSectorCount))
	{
		/* Make sure no random data is in the returned buffer. */
		memset((void *) pucBuffer, '\0', ulSectorCount * 512UL);

		if(pxDisk->xStatus.bIsInitialised != pdFALSE)
		{
			FF_PRINTF("prvFFRead: warning: %lu + %lu > %lu\n",
					ulSectorNumber, ulSectorCount, pxDisk->ulNumberOfSectors);
		}
		return lReturnCode;
	}

	/* Ensure the SDCard is ready for a new operation */
	if(SD_CheckStatusWithTimeout(sdMAX_TIME_TICKS) < 0) return lReturnCode;

	HAL_StatusTypeDef result = HAL_ERROR;

#if(SDIO_USES_DMA == 0)
	result = HAL_SD_ReadBlocks(&xSDHandle, pucBuffer,
			ulSectorNumber, ulSectorCount, sdMAX_TIME_TICKS)
	if(result == HAL_OK) lReturnCode = 0;
#else /*(SDIO_USES_DMA != 0)*/

	#if !defined(configUSE_CCRAM_FOR_HEAP) || (configUSE_CCRAM_FOR_HEAP == 0)
	if((((size_t)pucBuffer) & (sizeof(size_t) - 1)) == 0)
	{
		/* The buffer is word-aligned, call DMA read directly. */
		/* Reset the read complete flag before DMA operation */
		SD_ReadCplt = pdFALSE;
		result = HAL_SD_ReadBlocks_DMA(&xSDHandle, pucBuffer,
				ulSectorNumber, ulSectorCount);
		if(result == HAL_OK)
		{
			/* Reset the timers for a DMA transfer */
			prvEventSetupFunction();

			/* Wait for the read complete flag or a timeout */
			while(1)
			{
				if(SD_ReadCplt)
				{
					lReturnCode = 0;
					break;
				}
				if(prvEventWaitFunction(&xSDHandle))
				{
					/* A timeout is reached. */
					result = HAL_TIMEOUT;
					break;
				}
			}
		}
	}
	else
	#endif /*!defined(configUSE_CCRAM_FOR_HEAP) || (configUSE_CCRAM_FOR_HEAP == 0)*/
	{
		/* The buffer is NOT word-aligned, copy first to an aligned buffer. */
	#if (configUSE_CCRAM_FOR_HEAP != 0)
		uint8_t* pucDMABuffer = DMABuffer;
	#else /*(configUSE_CCRAM_FOR_HEAP != 0)*/
		uint8_t* pucDMABuffer = ffconfigMALLOC(512ul);
		if(pucDMABuffer != NULL)
	#endif /*(configUSE_CCRAM_FOR_HEAP != 0)*/
		{
			uint32_t ulSector;
			for(ulSector = 0; ulSector < ulSectorCount; ulSector++)
			{
				/* Reset the read complete flag before DMA operation */
				SD_ReadCplt = pdFALSE;
				result = HAL_SD_ReadBlocks_DMA(&xSDHandle, pucDMABuffer,
						ulSectorNumber +  ulSector, 1);
				if(result == HAL_OK)
				{
					/* Reset the timers for a DMA transfer */
					prvEventSetupFunction();

					/* Wait for the read complete flag or a timeout */
					while(1)
					{
						if(SD_ReadCplt) break;
						if(prvEventWaitFunction(&xSDHandle))
						{
							/* A timeout is reached. */
							result = HAL_TIMEOUT;
							break;
						}
					}
					if(result == HAL_TIMEOUT)
					{
						/* A timeout is reached, no need to read further */
						break;
					}
					memcpy(pucBuffer + 512ul * ulSector, pucDMABuffer, 512ul);
				}
				else break;
			}

	#if !defined(configUSE_CCRAM_FOR_HEAP) || (configUSE_CCRAM_FOR_HEAP == 0)
			ffconfigFREE(pucDMABuffer);
	#endif /*!defined(configUSE_CCRAM_FOR_HEAP) || \
			(configUSE_CCRAM_FOR_HEAP == 0)*/

			if((ulSector == ulSectorCount) && (result == HAL_OK))
				lReturnCode = 0;
		}
	}
#endif /*SDIO_USES_DMA*/

	return lReturnCode;
}

static int32_t prvFFWrite(uint8_t *pucBuffer,
		uint32_t ulSectorNumber, uint32_t ulSectorCount, FF_Disk_t *pxDisk)
{
	int32_t lReturnCode = FF_ERR_IOMAN_OUT_OF_BOUNDS_READ | FF_ERRFLAG;

	if(	(pxDisk == NULL) ||
		(xSDCardStatus != pdPASS) ||
		(pxDisk->ulSignature != sdSIGNATURE) ||
		(pxDisk->xStatus.bIsInitialised == pdFALSE) ||
		(ulSectorNumber >= pxDisk->ulNumberOfSectors) ||
		((pxDisk->ulNumberOfSectors - ulSectorNumber) < ulSectorCount))
	{
		if(pxDisk->xStatus.bIsInitialised != pdFALSE)
		{
			FF_PRINTF("prvFFWrite: warning: %lu + %lu > %lu\n",
					ulSectorNumber, ulSectorCount, pxDisk->ulNumberOfSectors);
		}
		return lReturnCode;
	}

	/* Ensure the SDCard is ready for a new operation */
	if(SD_CheckStatusWithTimeout(sdMAX_TIME_TICKS) < 0) return lReturnCode;

	HAL_StatusTypeDef result = HAL_ERROR;

#if(SDIO_USES_DMA == 0)
	sd_result = HAL_SD_WriteBlocks(&xSDHandle, pucBuffer,
			ulSectorNumber, ulSectorCount, sdMAX_TIME_TICKS);
	if(result == HAL_OK) lReturnCode = 0;
#else /*(SDIO_USES_DMA != 0)*/

	#if (configUSE_CCRAM_FOR_HEAP != 0)
	uint8_t* pucDMABuffer = DMABuffer;
	#else /*(configUSE_CCRAM_FOR_HEAP != 0)*/
	BaseType_t aligned = pdFALSE;
	uint8_t* pucDMABuffer;
	#endif /*(configUSE_CCRAM_FOR_HEAP != 0)*/

	#if !defined(configUSE_CCRAM_FOR_HEAP) || (configUSE_CCRAM_FOR_HEAP == 0)
	if((((size_t)pucBuffer) & (sizeof(size_t) - 1)) == 0)
	{
		/* The buffer is word-aligned, call DMA write directly. */
		aligned = pdTRUE;
	}
	else
	{
		/* The buffer is NOT word-aligned, read to an aligned buffer and then
		copy the data to the user provided buffer. */
		pucDMABuffer = ffconfigMALLOC(512ul);
		if(pucDMABuffer == NULL)
		{
			/* Could not allocate the buffer */
			return lReturnCode;
		}
	}
	#endif /*!defined(configUSE_CCRAM_FOR_HEAP) || \
			(configUSE_CCRAM_FOR_HEAP == 0)*/

	uint32_t ulSector;
	for(ulSector = 0; ulSector < ulSectorCount; ulSector++)
	{
	#if !defined(configUSE_CCRAM_FOR_HEAP) || (configUSE_CCRAM_FOR_HEAP == 0)
		if(aligned == pdFALSE)
	#endif /*!defined(configUSE_CCRAM_FOR_HEAP) || (configUSE_CCRAM_FOR_HEAP == 0)*/
		{
			memcpy(pucDMABuffer, pucBuffer + 512ul * ulSector, 512ul);
		}

		/* Reset the write complete flag before DMA operation */
		SD_WriteCplt = pdFALSE;

#ifdef DEBUG_SD_WRITE_OPERATION_TIME
		HAL_GPIO_WritePin(
				TEST_0_GPIO_PORT, TEST_0_GPIO_PIN, GPIO_PIN_SET);
#endif /*DEBUG_SD_WRITE_OPERATION_TIME*/

	#if !defined(configUSE_CCRAM_FOR_HEAP) || (configUSE_CCRAM_FOR_HEAP == 0)
		if(aligned == pdFALSE)
	#endif /*!defined(configUSE_CCRAM_FOR_HEAP) || (configUSE_CCRAM_FOR_HEAP == 0)*/
		{
			/* Write data from aligned buffer */
			result = HAL_SD_WriteBlocks_DMA(&xSDHandle, pucDMABuffer,
					ulSectorNumber + ulSector, 1);
		}
	#if !defined(configUSE_CCRAM_FOR_HEAP) || (configUSE_CCRAM_FOR_HEAP == 0)
		else
		{
			/* Call DMA write directly */
			result = HAL_SD_WriteBlocks_DMA(&xSDHandle,
					pucBuffer + 512ul * ulSector,
					ulSectorNumber + ulSector, 1);
		}
	#endif /*!defined(configUSE_CCRAM_FOR_HEAP) || \
	(configUSE_CCRAM_FOR_HEAP == 0)*/

#ifdef DEBUG_SD_WRITE_OPERATION_TIME
		HAL_GPIO_WritePin(
				TEST_0_GPIO_PORT, TEST_0_GPIO_PIN, GPIO_PIN_RESET);
#endif /*DEBUG_SD_WRITE_OPERATION_TIME*/

		if(result == HAL_OK)
		{
			/* Reset the timers for a DMA transfer */
			prvEventSetupFunction();

			/* Wait for the write complete flag or a timeout */
			while(1)
			{
				if(SD_WriteCplt)
				{
					if(SD_CheckStatusWithTimeout(sdMAX_TIME_TICKS) < 0)
						result = HAL_TIMEOUT;
					break;
				}
				if(prvEventWaitFunction(&xSDHandle))
				{
					/* A timeout is reached. */
					result = HAL_TIMEOUT;
					break;
				}
			}
			if(result == HAL_TIMEOUT)
			{
				/* A timeout is reached, no need to write further */
				break;
			}
		}
		else break;
	}

	#if !defined(configUSE_CCRAM_FOR_HEAP) || (configUSE_CCRAM_FOR_HEAP == 0)
	if(aligned == pdFALSE) ffconfigFREE(pucDMABuffer);
	#endif /*!defined(configUSE_CCRAM_FOR_HEAP) || \
	(configUSE_CCRAM_FOR_HEAP == 0)*/

	if((ulSector == ulSectorCount) && (result == HAL_OK))
	{
		/* Ensure the SDCard complete the write operation */
		lReturnCode = 0;
	}
#endif	/*SDIO_USES_DMA*/

	return lReturnCode;
}

static void vGPIO_SD_Init()
{
	GPIO_InitTypeDef GPIO_InitStruct;

	/* Peripheral clock enable */
	HAL_SD_SDIO_CLK_ENABLE();

	/* SDIO GPIO Configuration
	PC8     ------> SDIO_D0
	PC9     ------> SDIO_D1
	PC10    ------> SDIO_D2
	PC11    ------> SDIO_D3
	PC12    ------> SDIO_CK
	PD2     ------> SDIO_CMD
	*/

	/* SDIO data bus GPIO configuration */
	GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
	GPIO_InitStruct.Pull = GPIO_NOPULL;
	GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
	GPIO_InitStruct.Alternate = SD_SDIO_Dx_AF;

	SD_SDIO_D0_GPIO_CLK_ENABLE();
	GPIO_InitStruct.Pin = SD_SDIO_D0_GPIO_PIN;
	HAL_GPIO_Init(SD_SDIO_D0_GPIO_PORT, &GPIO_InitStruct);

#if(BUS_4BITS != 0)
	SD_SDIO_D1_GPIO_CLK_ENABLE();
	GPIO_InitStruct.Pin = SD_SDIO_D1_GPIO_PIN;
	HAL_GPIO_Init(SD_SDIO_D1_GPIO_PORT, &GPIO_InitStruct);

	SD_SDIO_D2_GPIO_CLK_ENABLE();
	GPIO_InitStruct.Pin = SD_SDIO_D2_GPIO_PIN;
	HAL_GPIO_Init(SD_SDIO_D2_GPIO_PORT, &GPIO_InitStruct);

	SD_SDIO_D3_GPIO_CLK_ENABLE();
	GPIO_InitStruct.Pin = SD_SDIO_D3_GPIO_PIN;
	HAL_GPIO_Init(SD_SDIO_D3_GPIO_PORT, &GPIO_InitStruct);
#endif

	/* SDIO CK and CMD GPIO configuration */
	SD_SDIO_CK_GPIO_CLK_ENABLE();
	GPIO_InitStruct.Pin = SD_SDIO_CK_GPIO_PIN;
	HAL_GPIO_Init(SD_SDIO_CK_GPIO_PORT, &GPIO_InitStruct);

	SD_SDIO_CMD_GPIO_CLK_ENABLE();
	GPIO_InitStruct.Pin = SD_SDIO_CMD_GPIO_PIN;
	HAL_GPIO_Init(SD_SDIO_CMD_GPIO_PORT, &GPIO_InitStruct);

	/* SD-card present GPIO configuration */
	SD_PRESENT_GPIO_CLK_ENABLE();
	GPIO_InitStruct.Pin = SD_PRESENT_PIN;
	GPIO_InitStruct.Mode = GPIO_MODE_IT_RISING_FALLING;
	GPIO_InitStruct.Pull = GPIO_PULLUP;
	HAL_GPIO_Init(SD_PRESENT_GPIO_PORT, &GPIO_InitStruct);

	/* Enable and set EXTI Line Interrupt */
	HAL_NVIC_SetPriority(SD_PRESENT_GPIO_EXTI_IRQn,
			SD_PRESENT_GPIO_EXTI_I_PRIOR, 0);
	HAL_NVIC_EnableIRQ(SD_PRESENT_GPIO_EXTI_IRQn);
}
